@@ -106,16 +106,22 @@
             <version>2.8.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency> <!-- not sure what this is or why its needed, but fixes a build error -->
-            <groupId>net.kyori</groupId>
-            <artifactId>adventure-text-minimessage</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency> <!-- NMS (mainly for investigating things) -->
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.16.5-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency> <!-- not sure what this is or why its needed, but fixes a build error -->
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-minimessage</artifactId>
+            <version>4.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
