@@ -31,9 +31,12 @@ permissions:
       worldofzombies.command.reload: true
       worldofzombies.command.info: true
       worldofzombies.command.database: true
+      worldofzombies.command.get: true
   worldofzombies.command.reload:
     description: Allows a player to reload this plugin's config files
   worldofzombies.command.info:
     description: Allows a player to get information about this plugin
   worldofzombies.command.database:
     description: Allows a player to delete or clone worlds' custom block databases
+  worldofzombies.command.get:
+    description: Allows a player to get the item from a custom block's definition
